# clearprism

./: .gitignore  CMakeLists.txt  Makefile  README.md  clearprism_tests
.github/workflows/: ci.yml  release.yml
bench/: bench_main.c
docs/: api.md  architecture.md  building.md  caching.md  configuration.md  registry.md  testing.md
include/: clearprism.h
src/: clearprism_admin.c  clearprism_agg.c  clearprism_cache.c  clearprism_cache_l1.c  clearprism_cache_l2.c  clearprism_connpool.c  clearprism_main.c  clearprism_query.c  clearprism_registry.c  clearprism_scanner.c  clearprism_util.c  clearprism_vtab.c  clearprism_where.c
test/: test_admin.c  test_agg.c  test_cache.c  test_connpool.c  test_main.c  test_registry.c  test_scanner.c  test_vtab.c
